tests/semantic/agg_checks/agg_checks.err
Error: Ungrounded variable  X0 in file agg_checks.dl at line 10
r("X",Y) :- Y = min X : { X != Y }.
--------------------^---------------
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
------^--------------------------------------
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
------------^--------------------------------
Error: Unable to deduce type for variable  X1 in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
--------------------^------------------------
Error: Ungrounded variable  X1 in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
--------------------^------------------------
Error: Unable to deduce type for variable  X1 in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
--------------------------^------------------
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
-------------------------------^-------------
Error: Unable to deduce type for variable  X1 in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
-------------------------------------^-------
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
---------------------------------------^-----
Error: Ungrounded variable  X2 in file agg_checks.dl at line 14
r("X",Y) :- Y = min X : { a("A",2) }.
--------------------^-----------------
Warning: Variable  X2 only occurs once in file agg_checks.dl at line 14
r("X",Y) :- Y = min X : { a("A",2) }.
--------------------^-----------------
Error: Ungrounded variable  X3 in file agg_checks.dl at line 17
r("X",Y) :- Y = min X : { a("A",Y), Y>X }.
--------------------^----------------------
Error: Unable to deduce type for variable  X4 in file agg_checks.dl at line 20
r("X",Y) :- Y = min X : a(X,_).
--------------------^-----------
Error: Unable to deduce type for variable  X4 in file agg_checks.dl at line 20
r("X",Y) :- Y = min X : a(X,_).
--------------------------^-----
Error: Undefined relation nonexistent in file agg_checks.dl at line 31
r("X",count: { nonexistent(_,_) }).
---------------^--------------------
Error: Undefined relation nonexistent in file agg_checks.dl at line 32
r("X",count: { nonexistent(_,_) } * 3).
---------------^------------------------
Error: Unable to stratify relation(s) {r}
Relation r in file agg_checks.dl at line 6
.decl r(a:symbol,b:number)
^--------------------------
has cyclic aggregation in file agg_checks.dl at line 28
r("X",Y) :- Y = min Y : r("X",Y).
------------------------^---------
16 errors generated, evaluation aborted
